--- a/FrontEnd/src/components/rooms/TablePosition.module.css
+++ b/FrontEnd/src/components/rooms/TablePosition.module.css
@@ -1,16 +1,35 @@
 .container {
-  position: absolute;
-  right: 0;
-  top: 0;
   padding: 0 20px 20px 20px;
   background-color: var(--primary-color);
   box-shadow: 0 0 10px var(--highlight-text-color);
   color: var(--primary-color-text);
   font-weight: 500;
-  margin: 10px;
   border-radius: 5px;
-  opacity: 0.9;
+
+  z-index: 99;
 }
+
+.normalContainer {
+  position: absolute;
+  right: 0;
+  top: 0;
+  margin: 10px;
+}
+
+.modalContainer {
+  position: absolute;
+  height: 300px;
+  width: 400px;
+  top: 20vh;
+  left: calc(50vw - 200px);
+}
+
+.headerContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .container h2 {
   text-align: center;
 }
