--- a/FrontEnd/src/components/rooms/TextToType.module.css
+++ b/FrontEnd/src/components/rooms/TextToType.module.css
@@ -3,23 +3,22 @@
   height: auto;
   margin: 20px;
   font-size: 1.7rem;
-  font-weight: 500;
+  font-weight: 300;
 }
 
 .inputHidden {
   position: absolute;
+  white-space: unset;
   scale: 0;
 }
 
-.correctLetter {
-  color: var(--gray-800);
-  opacity: 0.5;
-  position: relative;
-  animation: indicator 1s infinite;
+.textTyped {
+  color: var(--gray-900);
+  display: inline;
 }
 
-.incorrectLetter {
-  color: var(--red-600);
+.textToType {
+  color: var(--gray-500);
 }
 
 .space::before {
@@ -27,14 +26,56 @@
   display: inline-block;
 }
 
+.prev {
+  text-wrap: wrap;
+}
+
+.indicator {
+  animation: indicator 1.5s infinite linear;
+}
+
+.indicatorWrong {
+  animation: indicatorWrong 1.5s infinite linear;
+}
+
+@media (max-width: 800px) {
+  .prev {
+    font-size: 1.5rem;
+  }
+}
+
 @keyframes indicator {
   0% {
-    opacity: 1;
+    background: var(--primary-200);
+  }
+  25% {
+    background: var(--primary-400);
   }
   50% {
-    opacity: 0.3;
+    background: var(--primary-500);
+  }
+  75% {
+    background: var(--primary-400);
   }
   100% {
-    opacity: 1;
+    background: var(--primary-200);
+  }
+}
+
+@keyframes indicatorWrong {
+  0% {
+    background: var(--red-200);
+  }
+  25% {
+    background: var(--red-400);
+  }
+  50% {
+    background: var(--red-500);
+  }
+  75% {
+    background: var(--red-400);
+  }
+  100% {
+    background: var(--red-200);
   }
 }
