--- a/FrontEnd/src/components/rooms/roomPage.module.css
+++ b/FrontEnd/src/components/rooms/roomPage.module.css
@@ -1,7 +1,45 @@
-.subContainer {
-  margin: auto;
+.container {
+  position: relative;
   width: 90vw;
-  justify-content: space-between;
+  height: auto;
+  margin: auto;
+  margin-bottom: 200px;
+  max-width: 1100px;
+  padding: 30px 0;
+  border-radius: 10px;
+  background: var(--gray-800);
+}
+
+.title {
+  text-align: center;
+  display: block;
+  font-size: 2.3rem;
+}
+
+.containerGame {
+  position: relative;
+  margin: auto;
   display: flex;
+  justify-content: space-around;
+  max-width: 1100px;
   flex-wrap: wrap;
+  padding: 30px 0;
+  border-radius: 10px;
+  background: var(--gray-800);
+}
+
+.buttonBack {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+@media (max-width: 900px) {
+  .container {
+    width: 93vw;
+  }
+
+  .listUserContainer {
+    margin-bottom: 30px;
+  }
 }
