--- a/FrontEnd/src/components/rooms/textContainer.module.css
+++ b/FrontEnd/src/components/rooms/textContainer.module.css
@@ -1,13 +1,19 @@
 .container {
-  margin: 30px;
+  height: 400px;
+  width: 50%;
+  max-width: 600px;
   display: flex;
+  align-items: center;
   justify-content: center;
   background-color: var(--bluegray-100);
-  color: var(--gray-800);
-  align-items: center;
-  width: 600px;
-  height: 600px;
+  color: var(--gray-700);
   border: 2px solid #5995a080;
   border-radius: 9px;
   box-shadow: 0px 0px 10px #33333370;
+}
+
+@media (max-width: 930px) {
+  .container {
+    width: 400px;
+  }
 }
