--- a/FrontEnd/src/components/login.module.css
+++ b/FrontEnd/src/components/login.module.css
@@ -1,19 +1,22 @@
 .container {
+  position: relative;
   width: 100vw;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  height: 70vh;
   box-sizing: border-box;
-  flex-direction: column;
+  margin-top: -80px;
 }
 
 .subContainer {
+  position: absolute;
   padding: 30px;
   border-radius: 20px;
+  width: 350px;
+  top: 200px;
+  left: calc(50vw - 175px);
   box-shadow: 0px 0px 10px #aaaaaa90;
   transition: all 0.25s;
   cursor: pointer;
+  background: var(--surface-0);
 }
 .subContainer:hover {
   box-shadow: 0px 3px 10px #aaaaaa;
@@ -23,4 +26,21 @@
   width: 300px;
   margin-bottom: 10px;
   display: block;
+}
+
+.img {
+  position: absolute;
+  filter: drop-shadow(2px -2px 1px var(--primary-color));
+  width: 100%;
+  height: auto;
+  top: -50px;
+  left: 0;
+  z-index: -99;
+  opacity: 0.4;
+}
+
+@media (max-width: 1150px) {
+  .img {
+    display: none;
+  }
 }
