--- a/FrontEnd/src/components/practice-room/containerTypingPractice.module.css
+++ b/FrontEnd/src/components/practice-room/containerTypingPractice.module.css
@@ -1,4 +1,16 @@
 .container {
+  background-color: var(--bluegray-100);
+  color: var(--gray-700);
+  border: 2px solid #5995a080;
+  border-radius: 9px;
+  box-shadow: 0px 0px 10px #33333370;
+  display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+  padding: 0 30px;
+  align-items: center;
+  height: auto;
+  min-height: 300px;
+  width: 90%;
+  max-width: 1000px;
 }
