--- a/FrontEnd/src/components/practice-room/practice.module.css
+++ b/FrontEnd/src/components/practice-room/practice.module.css
@@ -1,10 +1,14 @@
 .container {
   position: relative;
-  width: 90vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+  width: 95vw;
   height: auto;
   margin: auto;
   margin-bottom: 200px;
-  max-width: 1100px;
+  max-width: 1200px;
   padding: 30px 0;
   border-radius: 10px;
   background: var(--gray-800);
