--- a/FrontEnd/src/components/rooms/textContainer.module.css
+++ b/FrontEnd/src/components/rooms/textContainer.module.css
@@ -1,15 +1,16 @@
 .container {
+  position: relative;
   height: 400px;
   width: 50%;
   max-width: 600px;
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  background-color: var(--bluegray-100);
+  justify-content: space-evenly;
   color: var(--gray-700);
   border: 2px solid #5995a080;
   border-radius: 9px;
-  box-shadow: 0px 0px 10px #33333370;
+  box-shadow: 0px 4px 6px #5995a040;
 }
 
 @media (max-width: 930px) {
