--- a/FrontEnd/src/components/practice-room/containerTypingPractice.module.css
+++ b/FrontEnd/src/components/practice-room/containerTypingPractice.module.css
@@ -1,9 +1,8 @@
 .container {
-  background-color: var(--bluegray-100);
   color: var(--gray-700);
-  border: 2px solid #5995a080;
   border-radius: 9px;
-  box-shadow: 0px 0px 10px #33333370;
+  box-shadow: 0px 4px 6px var(--surface-100);
+  border: 2px solid var(--surface-200);
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
