--- a/FrontEnd/src/components/practice-room/practice.module.css
+++ b/FrontEnd/src/components/practice-room/practice.module.css
@@ -9,7 +9,7 @@
   margin: auto;
   margin-bottom: 200px;
   max-width: 1200px;
-  padding: 30px 0;
+  padding: 50px 0;
   border-radius: 10px;
   background: var(--gray-800);
 }
@@ -17,4 +17,10 @@
 .title {
   text-align: center;
   font-size: 3.3rem;
+}
+
+.buttonBackRooms {
+  position: absolute;
+  left: 0;
+  top: 0;
 }
