--- a/FrontEnd/src/components/WritingVisualization.module.css
+++ b/FrontEnd/src/components/WritingVisualization.module.css
@@ -13,7 +13,7 @@
 }
 
 .textTyped {
-  color: var(--gray-900);
+  color: var(--gray-100);
   display: inline;
 }
 
@@ -24,6 +24,7 @@
 .space::before {
   content: '\23CE';
   display: inline-block;
+  font-weight: bold;
 }
 
 .prev {
