--- a/FrontEnd/src/components/infoRoom.scss
+++ b/FrontEnd/src/components/infoRoom.scss
@@ -15,6 +15,12 @@
   color: var(--bluegray-200);
 }
 
+.p-card {
+  padding: 0 5px;
+  border: 2px solid #5995a080;
+  box-shadow: 0px 4px 8px #5995a070;
+}
+
 .text-descriptors {
   font-weight: 600;
   color: var(--gray-300);
