--- a/FrontEnd/src/components/login/login.module.css
+++ b/FrontEnd/src/components/login/login.module.css
@@ -198,3 +198,16 @@
     font-size: 1.2rem;
   }
 }
+
+@media (max-width: 800px) {
+  .containerTextLogin {
+    flex-direction: column;
+    align-items: center;
+  }
+  .keyboardContainer {
+    display: none;
+  }
+  .containerLogin {
+    width: 320px;
+  }
+}
